--- a/src/components/parts/_citizen-menu-2.pug
+++ b/src/components/parts/_citizen-menu-2.pug
@@ -92,8 +92,8 @@
     },
   ]
 
-.life-menu-container.layout-default 
-  h2.section-title
+.section-content__menu
+  h2.section-content__title
     | 各種メニュー
   include ../../components/base/LinkMenu.pug
   +LinkMenu({basePath: basePath, items: citizenMenuItems})
