--- a/src/components/parts/_search-life-scene.pug
+++ b/src/components/parts/_search-life-scene.pug
@@ -47,8 +47,8 @@
 include ../../components/base/LinkMenu.pug
 include ../../components/base/SearchLink.pug
 
-.life-menu-container.layout-default 
-  h2.section-title.life-menu-title
+.section-content__life-scene
+  h2.section-content__title
     | ライフシーンで探す
   +LinkMenu({basePath: basePath, items: lifeMenuItems})
   +SearchLink({link: "../search.html"})
