--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,7 +11,7 @@
 @import "base/button";
 @import "base/textfield";
 @import "base/textarea";
-@import "common/breadcrumb";
+@import "base/breadcrumb";
 @import "base/tab";
 @import "base/search";
 @import "base/search-link";
@@ -20,14 +20,17 @@
 @import "base/contact-banner";
 @import "common/accessibility";
 @import "common/header";
-@import "parts/life-menu";
+@import "parts/search-life-scene";
 @import "parts/new-info";
 @import "parts/business-menu";
 @import "parts/life-scene-header";
-@import "parts/life-scene";
+@import "parts/scene";
 @import "parts/status";
 @import "parts/matters";
+@import "parts/top-menu";
+@import "parts/citizen-menu-2";
 @import "common/footer";
 @import "page/index";
+@import "page/search";
 @import "page/citizen2";
 @import "page/citizen3";
