--- a/src/stylesheets/parts/_scene.scss
+++ b/src/stylesheets/parts/_scene.scss
@@ -1,7 +1,6 @@
-.matters {
+.scene {
 	@extend .layout-default;
 	padding-top: 40px;
-
 	&__title {
 		font-size: 30px;
 		font-weight: bold;
@@ -19,20 +18,19 @@
 		}
 	}
 }
-.matters-list {
+.scene-list {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 	gap: 8px;
-
 	&__item {
 		border: 1px solid #e1e1e1;
 		background-color: #fff;
 		border-radius: 8px;
 		width: calc(100% / 4 - 8px);
 		&:hover {
-			background-color: #008660;
+			background-color: colors(primary);
 			color: #fff;
 			cursor: pointer;
 			transition: 0.2s;
