--- a/src/components/parts/_life-scene-header.pug
+++ b/src/components/parts/_life-scene-header.pug
@@ -1,6 +1,6 @@
-.life-scene-header-container.box-shadow
-  h1(class="life-scene-header" aria-describedby="life-scene-desc")
+.life-scene-header
+  h1.life-scene-header__label(aria-describedby="life-scene-desc")
     | ライフシーンで探す
-  p(class="life-scene-description" id="life-scene-desc")
+  p.life-scene-header__description#life-scene-desc
     | 人生の出来事、「こんなことがしたい」「知りたい」といったことを<br>選択いただくことで、ご自身に合った検索ができます。
-  img(src="../images/common/search_menu_img.png" alt="" class="life-scene-header-img")
+  img.life-scene-header__icon(src="../images/common/search_menu_img.png" alt="")
