--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -6,7 +6,7 @@ body {
 	color: #3b4040;
 	line-height: 1.6;
 	vertical-align: baseline;
-	font-family: "YuGothic", "Noto Sans JP", sans-serif;
+	font-family: "BIZ UDGothic", sans-serif;
 	font-size: 16px;
 }
 .section-content {
@@ -20,6 +20,9 @@ body {
 .box-shadow {
 	box-shadow: 0px 4px 8px rgba($color: #000000, $alpha: 0.16);
 }
+.bg-light {
+	background-color: #fafafa;
+}
 .visually-hidden {
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
@@ -29,7 +32,7 @@ body {
 	position: absolute;
 	white-space: nowrap;
 }
-.section-title {
+.section-content__title {
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
