--- a/src/stylesheets/parts/_status.scss
+++ b/src/stylesheets/parts/_status.scss
@@ -1,26 +1,25 @@
-.bg-light {
-	background-color: #fafafa;
-}
-.search-menu-container {
+.status {
+	@extend .layout-default;
 	padding-top: 40px;
-}
 
-.status-title {
-	font-size: 30px;
-	font-weight: bold;
-	padding-bottom: 40px;
-	margin-bottom: 40px;
-	position: relative;
-	&::after {
-		content: "";
-		display: block;
-		position: absolute;
-		width: 56px;
-		height: 2px;
-		background-color: #cdd6dd;
-		margin-top: 40px;
+	&__title {
+		font-size: 30px;
+		font-weight: bold;
+		padding-bottom: 40px;
+		margin-bottom: 40px;
+		position: relative;
+		&::after {
+			content: "";
+			display: block;
+			position: absolute;
+			width: 56px;
+			height: 2px;
+			background-color: #cdd6dd;
+			margin-top: 40px;
+		}
 	}
 }
+
 .status-list {
 	display: flex;
 	flex-wrap: wrap;
@@ -28,7 +27,7 @@
 	align-items: center;
 	gap: 8px;
 
-	.status-item {
+	&__item {
 		border: 1px solid #e1e1e1;
 		background-color: #fff;
 		border-radius: 8px;
