--- a/src/components/citizen3.pug
+++ b/src/components/citizen3.pug
@@ -1,12 +1,51 @@
 extends common/_layout
 
 block pageOption
+  -
+    const anchorNavList = [
+      {
+        link: "#article_1",
+        label: "概要"
+      },
+      {
+        link: "#article_2",
+        label: "対象者"
+      },
+      {
+        link: "#article_3",
+        label: "届出について"
+      },
+      {
+        link: "#article_4",
+        label: "手数料"
+      },
+      {
+        link: "#article_5",
+        label: "必要なもの"
+      },
+      {
+        link: "#article_6",
+        label: "こんな時は届出が必要です"
+      },
+      {
+        link: "#article_7",
+        label: "お問い合わせ"
+      },
+    ]
 
 block content
   section.article
     h1.article__title 
       | 妊娠の届出・母子健康手帳の交付
-    section.article__about
+    section.anchor-nav 
+      nav
+        ul.anchor-nav-list
+          each item in anchorNavList
+            li.anchor-nav-list__item
+              a.anchor-nav-list__link(href=item.link) 
+                span.anchor-nav-list__label
+                  = item.label
+    section.article__about#article_1
       h2.article__heading
         | 概要
       .article__content
@@ -32,13 +71,13 @@ block content
           h3.article__sub-heading
             | 大黒市で交付できる母子健康手帳の外国語版
           p 英語、中国語、ハングル語、タイ語、スペイン語、ポルトガル語、タガログ語、インドネシア語、ベトナム語、ネパール語
-    section.article__target 
+    section.article__target#article_2
       h2.article__heading
         | 対象者
       .article__content
         .article__text 
           | 妊娠した方(大黒市に居住している方)
-    section.article__notification
+    section.article__notification#article_3
       h2.article__heading
         | 届出について
       .article__content
@@ -46,13 +85,13 @@ block content
           | お住まいの区の保健福祉センター保健業務担当に妊娠届出書を提出してください。
           | 期日はありませんが、妊娠が分かりましたら早めに届出をしてください。
           | 届出は対象者ご本人が行ってください。 ご本人が来所できない場合は、代理の方が提出することもできます。代理の方が来所されるときは、委任状等が必要となります。
-    section.article__fee 
+    section.article__fee#article_4
       h2.article__heading
         | 手数料
       .article__content
         .article__text
           | 無料
-    section.article__needed
+    section.article__needed#article_5
       h2.article__heading
         | 必要なもの
       .article__content
@@ -85,14 +124,14 @@ block content
             li.article-list__item
               p.article-list__item-text 
                 | 健康保険証、年金手帳、源泉徴収票、写真なしの身分証など2点以上
-    section.article__necessary
+    section.article__necessary#article_6
       h2.article__heading
         | こんな時は届出が必要です
       .article__content
         .article__text
           | 大黒市外へ転出する場合 転出先の市区町村に妊娠している旨を届け出てください。母子健康手帳はそのままお使いいただけます。なお、転出後は大黒市発行の妊婦健康診査受診票は使用できなくなりますので、転出先の市区町村で新たな受診票の交付を受けてください。<br>
           | 大黒市内へ転入する時や氏名の変更をする時は、お住まいの区の保健福祉センター保健業務担当に既に交付を受けた 母子健康手帳と「居住地・氏名変更届」を提出してください。転入前の母子健康手帳はそのままお使いいただけます。
-    section.article__contact
+    section.article__contact#article_7
       h2.article__heading
         | お問い合わせ
       .article__content
