--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -36,7 +36,7 @@ body {
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
-	padding: 56px;
+	padding: 56px 0;
 }
 .content-title {
 	font-size: 24px;
