--- a/src/stylesheets/parts/_scene.scss
+++ b/src/stylesheets/parts/_scene.scss
@@ -37,3 +37,11 @@
 		}
 	}
 }
+
+@media only screen and (max-width: breakpoint(sp)) {
+	.scene-list {
+		&__item {
+			width: calc(50% - 4px);
+		}
+	}
+}
