--- a/src/stylesheets/parts/_status.scss
+++ b/src/stylesheets/parts/_status.scss
@@ -40,3 +40,10 @@
 		}
 	}
 }
+@media only screen and (max-width: breakpoint(sp)) {
+	.status-list {
+		&__item {
+			width: calc(50% - 4px);
+		}
+	}
+}
