feat: 検索結果PC追加

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -32,5 +32,6 @@
 @import "common/footer";
 @import "page/index";
 @import "page/search";
+@import "page/search-result";
 @import "page/citizen2";
 @import "page/citizen3";
