--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -28,6 +28,7 @@
 @import "parts/status";
 @import "parts/matters";
 @import "parts/top-menu";
+@import "parts/top-menu-2";
 @import "parts/citizen-menu-2";
 @import "common/footer";
 @import "page/index";
