--- a/src/stylesheets/page/_index.scss
+++ b/src/stylesheets/page/_index.scss
@@ -2,13 +2,23 @@
 	&__hero {
 		position: relative;
 		height: 474px;
+		width: 100%;
 		overflow: hidden;
+		margin-bottom: 40px;
+
+		.hero-img {
+			object-fit: cover;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+		}
 
 		.label-img {
 			position: absolute;
-			top: 0;
-			right: 8%;
-			width: 190px;
+			top: 30%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 240px;
 			z-index: 1;
 		}
 	}
