--- a/src/components/parts/_citizen-menu-2.pug
+++ b/src/components/parts/_citizen-menu-2.pug
@@ -1,99 +1,85 @@
 -
   const citizenMenuItems = [
     {
-      icon: "life_menu_icon_1.png",
       text: "戸籍・住民票・印鑑登録",
       link: "#"
     },
     {
-      icon: "life_menu_icon_2.png",
       text: "税",
       link: "#"
     },
     {
-      icon: "life_menu_icon_3.png",
       text: "国民健康保険",
       link: "#"
     },
     {
-      icon: "life_menu_icon_4.png",
       text: "国民年金",
       link: "#"
     },
     {
-      icon: "life_menu_icon_5.png",
       text: "水道・ガス・電気",
       link: "#"
     },
     {
-      icon: "life_menu_icon_6.png",
       text: "交通",
       link: "#"
     },
     {
-      icon: "life_menu_icon_7.png",
       text: "駐輪・駐車",
       link: "#"
     },
     {
-      icon: "life_menu_icon_8.png",
       text: "都市計画",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "ゴミ・環境保全",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "ペット・動物",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "専門相談・消費相談",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "健康・福祉・医療",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "文化・スポーツ・生涯学習",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "市民活動",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "防災",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "防犯",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "安全・安心",
       link: "#"
     },
     {
-      icon: "life_menu_icon_1.png",
       text: "救急・消防",
       link: "#"
     },
   ]
 
+include ../../components/base/LinkMenu.pug
+
 .section-content__menu
   h2.section-content__title
-    | 各種メニュー
-  include ../../components/base/LinkMenu.pug
-  +LinkMenu({basePath: basePath, items: citizenMenuItems})
+    | UMメニュー
+  ul.citizen-menu-list
+    each item in citizenMenuItems
+      li.citizen-menu-list__item
+        +LinkMenu({basePath: basePath, icon: item.icon, text: item.text})
