--- a/src/stylesheets/base/_link-menu.scss
+++ b/src/stylesheets/base/_link-menu.scss
@@ -15,6 +15,7 @@
 	&__icon {
 		width: 50%;
 		height: auto;
+		margin-bottom: 16px;
 	}
 }
 .link-menu-link {
@@ -24,7 +25,7 @@
 	&__text {
 		font-weight: bold;
 		font-size: 20px;
-		margin-top: 16px;
+
 		& > span {
 			margin-right: 8px;
 		}
