--- a/src/components/common/_layout.pug
+++ b/src/components/common/_layout.pug
@@ -6,6 +6,7 @@ html(lang="ja")
 
   block pageOption
   - let pathImage  = '../images/';
+  - const basePath = "../images/top/"
 
   head
     meta(charset="utf-8")
