--- a/src/stylesheets/common/_header.scss
+++ b/src/stylesheets/common/_header.scss
@@ -7,11 +7,11 @@
 		background-color: #fff;
 		padding: 24px 20px;
 	}
-	.conten-top {
+	.content-top {
 		display: flex;
 		align-items: center;
 	}
-	.conten-bottom,
+	.content-bottom,
 	.content-search,
 	.content-search-box,
 	.icon-menu-icon {
@@ -19,6 +19,31 @@
 	}
 	.icon-wrapper {
 		flex-grow: 1;
+	}
+	.alert-trigger {
+		padding: 0 24px;
+		&__btn {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			&:hover {
+				opacity: 0.8;
+			}
+			&[aria-expanded="true"] {
+				.alert-trigger__icon {
+					transform: rotate(180deg);
+					transition: 0.4s;
+				}
+			}
+		}
+		&__icon {
+			transition: 0.4s;
+		}
+		&__text {
+			text-align: center;
+			color: #cc003f;
+			line-height: 1.5;
+		}
 	}
 	.logo {
 		margin-right: 20px;
@@ -205,7 +230,7 @@
 			width: 100%;
 		}
 
-		.conten-top {
+		.content-top {
 			width: 100%;
 			padding: 16px;
 			background-color: #fff;
@@ -216,7 +241,7 @@
 			}
 		}
 
-		.conten-bottom {
+		.content-bottom {
 			display: block;
 			margin-top: 0;
 			padding: 13px 22px 20px;
@@ -265,6 +290,11 @@
 						width: 100%;
 					}
 				}
+			}
+		}
+		.alert-trigger {
+			&__text {
+				font-size: 14px;
 			}
 		}
 
