--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -20,6 +20,7 @@
 @import "base/contact-banner";
 @import "common/accessibility";
 @import "common/header";
+@import "parts/alert";
 @import "parts/search-life-scene";
 @import "parts/new-info";
 @import "parts/business-menu";
