--- a/src/components/common/_header.pug
+++ b/src/components/common/_header.pug
@@ -1,10 +1,17 @@
 header.header.x-header
   .header-wrapper.box-shadow
-    .conten-top.layout-default
+    .content-top.layout-default
       .icon-wrapper
         img(src="../images/common/daikoku-icon.png" alt="大黒市" class="logo")
-
+      .alert-trigger
+        button.alert-trigger__btn(aria-expanded="false" aria-controls="alert-section")
+          p.alert-trigger__text
+            | 防災<br/>緊急情報
+          i(class="fas fa-caret-down alert-trigger__icon")
       include ./_accessibility.pug
+
+section.section-content
+  include ../parts/_alert.pug
 
 
 
