--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -9,9 +9,9 @@ body {
 	font-family: "BIZ UDGothic", sans-serif;
 	font-size: 16px;
 }
-.section-content {
-	padding-bottom: 80px;
-}
+// .section-content {
+// 	padding-bottom: 80px;
+// }
 .layout-default {
 	max-width: width(max);
 	margin-left: auto;
