--- a/src/stylesheets/parts/_top-menu-2.scss
+++ b/src/stylesheets/parts/_top-menu-2.scss
@@ -1,7 +1,7 @@
 .section-content__top {
 	@extend .layout-default;
+	padding-bottom: 80px;
 }
-
 .visitor-menu-list {
 	display: flex;
 	flex-wrap: wrap;
