fix: heroにアニメーション追加

--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -7,7 +7,9 @@ block pageOption
 block content
 	section.section-content__hero
 		img(src="../images/top/top_hero_1.png" alt="" class="hero-img")
-		img(src="../images/top/top_hero_1_logo.png" alt="" class="label-img")
+		img(src="../images/top/top_hero_1_logo.png" alt="" class="logo-img")
+		img(src="../images/top/top_label_pc.png" alt="" class="label-img-pc")
+		img(src="../images/top/top_label_sp.png" alt="" class="label-img-sp")
 
 	section.section-content 
 		include ./parts/_top-menu.pug
