--- a/src/stylesheets/page/_index.scss
+++ b/src/stylesheets/page/_index.scss
@@ -14,16 +14,40 @@
 			width: 100%;
 			height: 100%;
 		}
-
-		.label-img {
+		.logo-img {
+			animation: fadeIn 2s;
 			position: absolute;
-			top: 30%;
+			top: 40%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			width: 240px;
+			width: 280px;
 			z-index: 1;
 		}
+		.label-img-pc {
+			animation: fadeIn 2s;
+			position: absolute;
+			top: 46%;
+			left: 51%;
+			transform: translate(-50%, -50%);
+			width: 100%;
+			max-width: 508px;
+			z-index: 1;
+		}
+		.label-img-sp {
+			display: none;
+		}
 	}
+	@keyframes fadeIn {
+		0% {
+			opacity: 0;
+			transform: translate(-50%, -40%);
+		}
+		100% {
+			opacity: 1;
+			transform: translate(-50%, -50%);
+		}
+	}
+
 	&__container {
 		display: flex;
 		align-items: center;
@@ -41,8 +65,32 @@
 		border: 1px solid black;
 	}
 }
-@media all and (-ms-high-contrast: none) {
-	.index-container {
-		margin-bottom: 8px;
+@media only screen and (max-width: breakpoint(sp)) {
+	.section-content {
+		position: relative;
+		overflow: hidden;
+		&__hero {
+			.logo-img {
+				top: 30%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 200px;
+				z-index: 1;
+			}
+			.label-img-pc {
+				display: none;
+			}
+			.label-img-sp {
+				display: block;
+				animation: fadeIn 2s;
+				position: absolute;
+				top: 74%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 100%;
+				max-width: 160px;
+				z-index: 1;
+			}
+		}
 	}
 }
