fix: カテゴリトップ作成

--- a/src/components/base/Accordion.pug
+++ b/src/components/base/Accordion.pug
@@ -35,5 +35,5 @@ mixin Accordion(params={})
           aria-hidden="true"
           aria-labelledby=triggerId
         )
-          p.accordion-panel__text
-            = item.content
+          .accordion-panel__text
+            block
