--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -18,6 +18,7 @@
 @import "base/link-list";
 @import "base/link-menu";
 @import "base/contact-banner";
+@import "base/banner";
 @import "common/accessibility";
 @import "common/header";
 @import "parts/alert";
@@ -37,3 +38,4 @@
 @import "page/search-result";
 @import "page/citizen2";
 @import "page/citizen3";
+@import "page/category-top";
