--- a/src/components/common/_header.pug
+++ b/src/components/common/_header.pug
@@ -2,7 +2,8 @@ header.header.x-header
   .header-wrapper.box-shadow
     .content-top.layout-default
       .icon-wrapper
-        img(src="../images/common/daikoku-icon.png" alt="大黒市" class="logo")
+        a(href="/")
+          img(src="../images/common/daikoku-icon.png" alt="大黒市" class="logo")
       .alert-trigger
         button.alert-trigger__btn(aria-expanded="false" aria-controls="alert-section")
           p.alert-trigger__text
