feat:イベント時TOP追加

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -21,6 +21,10 @@
 @import "base/banner";
 @import "common/accessibility";
 @import "common/header";
+@import "common/slick";
+@import "common/accessible-slick-theme";
+@import "common/slick-theme";
+@import "common/carousel";
 @import "parts/alert";
 @import "parts/search-life-scene";
 @import "parts/new-info";
