--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -5,11 +5,16 @@ block pageOption
 	- contentClass.push('index-container')
 
 block content
-	section.section-content__hero
-		img(src="../images/top/top_hero_1.png" alt="" class="hero-img")
-		img(src="../images/top/top_hero_1_logo.png" alt="" class="logo-img")
-		img(src="../images/top/top_label_pc.png" alt="" class="label-img-pc")
-		img(src="../images/top/top_label_sp.png" alt="" class="label-img-sp")
+	//- section.section-content__hero
+	//- 	img(src="../images/top/top_hero_1.png" alt="" class="hero-img")
+	//- 	img(src="../images/top/top_hero_1_logo.png" alt="" class="logo-img")
+	//- 	img(src="../images/top/top_label_pc.png" alt="" class="label-img-pc")
+	//- 	img(src="../images/top/top_label_sp.png" alt="" class="label-img-sp")
+	section.section-content__carousel
+		img(src="../images/top/top_hero_event_1.png" alt="7/20 大黒市にリニアが開通しました！" class="carousel-img")
+		img(src="../images/top/top_hero_1.png" alt="7/20 大黒市にリニアが開通しました！" class="carousel-img")
+		img(src="../images/top/top_hero_event_1.png" alt="7/20 大黒市にリニアが開通しました！" class="carousel-img")
+
 
 	section.section-content 
 		include ./parts/_top-menu.pug
