--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -23,8 +23,6 @@
 @import "common/header";
 @import "common/slick";
 @import "common/accessible-slick-theme";
-@import "common/slick-theme";
-@import "common/carousel";
 @import "parts/alert";
 @import "parts/search-life-scene";
 @import "parts/new-info";
@@ -36,6 +34,7 @@
 @import "parts/top-menu";
 @import "parts/top-menu-2";
 @import "parts/citizen-menu-2";
+@import "parts/slider";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
